[package]
name = "sierra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "*"
serde = "1.0.152"
tokio = { version = "1", features = ["macros"] }
mongodb = { version = "2", default-features = false, features = ["async-std-runtime"] }
serde_json = "1.0"